--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "plugin"]
 	path = plugin
-	url = https://github.com/fr3ts0n/AndrOBD-libplugin.git
+	url = git@github.com:landoulsi/AndrOBD-Plugin.git
